Implment a system for keeping track of items pending database sync and add the ability to replace and remove them then newer data is provided in form fields. Also add transition effect to upvotes

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -7,3 +7,25 @@ body {
     display: flex
   }
 }
+
+.upvotes-enter {
+  position: absolute;
+  transition: all 2.5s;
+  transform: translateY(100%);
+
+  &.upvotes-enter-active {
+    transform: translateY(0);
+  }
+}
+
+.upvotes-exit {
+  position: absolute;
+  transition: all 2.5s;
+  //left: 0;
+  //bottom: 0;
+  transform: translateY(0);
+
+  &.upvotes-exit-active {
+    transform: translateY(-100%);
+  }
+}
