Implement react-flip-move animations on upvotes

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -97,6 +97,7 @@ body {
 // Training
 //-----------------------------------------
 .training {
+	background: $color-white;
 	border: 1px solid $color-gallery;
 	border-radius: 4px;
 	margin-bottom: 25px;
